Base64encoder von Sun weg